[package]
name = "isogit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde_json = "1.0.108"
serde = {version ="1.0.108", features = ["derive"]}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
axum-macros = "0.3.8"
git2 = "0.18.3"
anyhow = "1.0.82"
async-fs = "2.1.1"
